[tool.poetry]
name = "aoc.py"
version = "0.1.0"
description = "Advent of Code in Python."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/aoc.py"
repository = "https://github.com/nekitdev/aoc.py"
documentation = "https://nekitdev.github.io/aoc.py"

keywords = ["python", "aoc"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://nekit.dev/discord"
Issues = "https://github.com/nekitdev/aoc.py/issues"

[[tool.poetry.packages]]
include = "aoc"

[tool.poetry.scripts]
aoc = "aoc.main:aoc"

[tool.poetry.dependencies]
python = ">= 3.8"

attrs = ">= 23.1.0"

pendulum = ">= 2.1.2"

click = ">= 8.1.7"

versions = ">= 1.6.1"

entrypoint = ">= 1.4.0"

aiohttp = ">= 3.9.1"
yarl = ">= 1.9.3"

typing-aliases = ">= 1.3.1"
typing-extensions = ">= 4.8.0"

[tool.poetry.dependencies.trogon]
version = ">= 0.5.0"
python = "^3.8"

[tool.poetry.dependencies.funcs]
version = ">= 0.8.0"
optional = true

[tool.poetry.dependencies.iters]
version = ">= 0.15.0"
optional = true

[tool.poetry.dependencies.wraps]
version = ">= 0.6.1"
optional = true

[tool.poetry.extras]
ext = ["funcs", "iters", "wraps"]

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "23.12.1"
flake8-pyproject = "1.2.3"

[tool.poetry.group.format.dependencies.flake8]
version = "6.1.0"
python = ">= 3.8.1"

[tool.poetry.group.format.dependencies.isort]
version = "5.12.0"

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
mypy = "1.7.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"
pytest-benchmark = "4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.4.11"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.24.0"
extras = ["python"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
changelogging = "1.3.0"

[tool.black]
line_length = 100

[tool.flake8]
max_line_length = 100
ignore = [
    "E402",  # module level import not at top of file (circular import fixes)
    "E741",  # ambiguous variable names
]

[tool.isort]
line_length = 100
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov aoc"
testpaths = ["tests"]

[tool.coverage.run]
source = ["aoc"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
show_column_numbers = true

disallow_any_decorated = true
disallow_any_generics = true
warn_return_any = true

no_implicit_optional = true
strict_optional = true

strict_equality = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_globals = true

disallow_incomplete_defs = true

warn_no_return = true
warn_unreachable = true

warn_redundant_casts = true
warn_unused_ignores = false  # compatibility

[tool.changelogging]
name = "aoc.py"
version = "0.1.0"
url = "https://github.com/nekitdev/aoc.py"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.8.1"]
build-backend = "poetry.core.masonry.api"
