[tool.poetry]
name = "aoc-core"
version = "0.1.0"
description = "Advent of Code in Python."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/aoc-core"
repository = "https://github.com/nekitdev/aoc-core"
documentation = "https://nekitdev.github.io/aoc-core"

keywords = ["python", "aoc"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Funding = "https://nekit.dev/funding"
Discord = "https://nekit.dev/discord"
Issues = "https://github.com/nekitdev/aoc-core/issues"

[[tool.poetry.packages]]
include = "aoc"

[tool.poetry.scripts]
aoc = "aoc.main:aoc"

[tool.poetry.dependencies]
python = ">= 3.8"

attrs = "^23.2.0"

pendulum = "^3.0.0"

click = "^8.1.7"

versions = "^2.1.0"

entrypoint = "^2.0.0"

aiohttp = "^3.9.3"
yarl = "^1.9.4"

typing-aliases = "^1.6.0"
typing-extensions = "^4.9.0"
wraps = "^0.8.0"

[tool.poetry.dependencies.trogon]
version = "^0.5.0"
python = "^3.8"

[tool.poetry.dependencies.funcs]
version = "^0.8.0"
optional = true

[tool.poetry.dependencies.iters]
version = "^0.15.0"
optional = true

[tool.poetry.extras]
ext = ["funcs", "iters"]  # `wraps` is required to handle panics

[tool.poetry.group.format.dependencies]
ruff = "0.2.1"

[tool.poetry.group.check.dependencies]
mypy = "1.8.0"

[tool.poetry.group.test.dependencies]
coverage = "7.4.1"
pytest = "8.0.0"
pytest-cov = "4.1.0"
pytest-benchmark = "4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.8"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.24.0"
extras = ["python"]

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "1.3.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E741",  # ambiguous variable name
]

[tool.pytest.ini_options]
addopts = "--cov aoc"
testpaths = ["tests"]

[tool.coverage.run]
source = ["aoc"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
strict = true

[tool.changelogging]
name = "aoc-core"
version = "0.1.0"
url = "https://github.com/nekitdev/aoc-core"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.9.0"]
build-backend = "poetry.core.masonry.api"
